# synthetic-ap

./: .gitignore  .xero_token.json  README.md  app.py  pyproject.toml
data/catalogs/: chart_of_accounts.yaml  items.yaml  tax_codes.yaml  vendor_items.yaml  vendors.yaml
data/config/: runtime_config.yaml  service_defaults.yaml
documentation/: system_arch.excalidraw
pages/: 1_Catalogs.py  2_Config.py  3_Runs.py  4_Generator.py  5_Logs.py  6_Insert_to_Xero.py
runs/2025-08-20-1913965145/: generation_report.json  insertion_report.json  invoice_lines.parquet  invoices.parquet  plan.json  xero_invoices.json  xero_invoices_with_meta.json
runs/2025-08-20-2020417432/: generation_report.json  invoice_lines.parquet  invoices.parquet  plan.json  xero_invoices.json  xero_invoices_with_meta.json
src/synthap/: __init__.py  cli.py  logs.py  paths.py
src/synthap/ai/: descriptions.py  planner.py  schema.py  synthgen.py
src/synthap/catalogs/: generator.py  loader.py  manager.py
src/synthap/config/: reset.py  runtime_config.py  settings.py
src/synthap/data/: storage.py
src/synthap/ui/: app.py  (+1 more)
streamlit/: 1_Catalogs.py  2_Config.py  3_Runs.py  4_Generator.py
streamlit_app/: Dashboard.py  runner.py
streamlit_app/pages/: 0_Catalog_Generator.py  2_Config.py  3_Runs.py  4_Generator.py  5_Instructions.py  6_Logs.py  7_Insert.py
tests/: test_force_no_tax.py  test_generator_features.py  test_invoice_number.py  test_nlp_corrections.py  test_nlp_llm.py  test_nlp_scope.py  test_payments.py  test_plan_clamp.py  test_reset.py  test_xero_client.py  test_xero_token_refresh.py
(+21 files in other folders)
